# HITSZ-DIP-Homework

./: README.md
dip_ws/devel/: .catkin  .rosinstall  setup.sh
dip_ws/devel/include/dashgo_tools/: check_msgAction.h  check_msgActionFeedback.h  check_msgActionGoal.h  check_msgActionResult.h  check_msgFeedback.h  check_msgGoal.h  check_msgResult.h
dip_ws/devel/lib/dashgo_tools/: get_scan_data
dip_ws/devel/lib/exp1_pkg/: demo  demo2  demo3
dip_ws/devel/lib/exp2_pkg/: demo1
dip_ws/devel/lib/exp3_pkg/: demo33  homework_8
dip_ws/devel/lib/exp4_pkg/: Color  exp4
dip_ws/devel/lib/main_controller/: final  rviz_visualize  test_planning
dip_ws/devel/lib/pkgconfig/: dashgo_driver.pc  dashgo_tools.pc  exp1_pkg.pc  exp2_pkg.pc  exp3_pkg.pc  exp4_pkg.pc  main_controller.pc  realsense2_camera.pc  realsense2_description.pc  robot_pose_ekf.pc  yocs_velocity_smoother.pc
dip_ws/devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf  test_robot_pose_ekf_zero_covariance
dip_ws/devel/share/dashgo_driver/cmake/: dashgo_driver-msg-extras.cmake  dashgo_driverConfig.cmake
dip_ws/devel/share/dashgo_tools/cmake/: dashgo_tools-msg-paths.cmake  dashgo_toolsConfig.cmake
dip_ws/devel/share/exp1_pkg/cmake/: exp1_pkgConfig.cmake
dip_ws/devel/share/exp2_pkg/cmake/: exp2_pkgConfig.cmake
dip_ws/devel/share/exp3_pkg/cmake/: exp3_pkgConfig.cmake
dip_ws/devel/share/exp4_pkg/cmake/: exp4_pkgConfig.cmake
dip_ws/devel/share/main_controller/cmake/: main_controllerConfig.cmake
dip_ws/devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
dip_ws/devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
dip_ws/src/dashgo_driver/launch/: driver_imu.launch  serial.launch
dip_ws/src/exp1_pkg/: CMakeLists.txt  package.xml
dip_ws/src/exp1_pkg/src/: demo2.cpp  demo3.cpp
dip_ws/src/exp2_pkg/: CMakeLists.txt
dip_ws/src/exp2_pkg/src/: demo.cpp
dip_ws/src/exp3_pkg/: CMakeLists.txt
dip_ws/src/exp3_pkg/src/: demo.cpp  demo_copy.cpp  homework_8.cpp
dip_ws/src/exp4_pkg/: CMakeLists.txt
dip_ws/src/exp4_pkg/launch/: exp4.launch
dip_ws/src/exp4_pkg/src/: Color.cpp  exp4.cpp
dip_ws/src/main_controller/: CMakeLists.txt
dip_ws/src/main_controller/App/: remap.cpp
dip_ws/src/main_controller/config/: camera.yaml  dip_rviz_config.rviz
dip_ws/src/main_controller/include/: common_definition.h  kinematic_model.h  math_tools.h  planning.h  state_update.h  visualize.h
dip_ws/src/main_controller/launch/: final.launch
dip_ws/src/main_controller/log/: dip_log.md
dip_ws/src/main_controller/script/: inference.py  main.py  mainv2.py  mainv3.py
dip_ws/src/main_controller/script/inference_model/: model.pdiparams  model.pdmodel  model.yml  pipeline.yml
dip_ws/src/main_controller/script/seg/: config.py  inference.py  main.py
dip_ws/src/main_controller/script/yolo/: inference.py  main.py
dip_ws/src/main_controller/src/: final.cpp  rviz_visualize.cpp  test.cpp
dip_ws/src/robot_pose_ekf/: robot_pose_ekf.launch
dip_ws/src/robot_pose_ekf/src/: odom_estimation_node.cpp
(+10 files in other folders)
